[package]
name        = "kroos"
version     = "0.0.1-b"
edition     = "2024"
description = "Flexible smart pointer for ?Sized types with customizable reference counting."
authors     = [ "Kaffssist <maxpavez02@gmail.com>" ]
repository  = "https://github.com/Pavez7274/kroos"
license     = "AGPL-3.0-only "
keywords    = [ "smart-pointer", "reference-counting", "allocation", "unsized", "unsafe" ]
categories  = [ "memory-management", "data-structures", "concurrency" ]

[dependencies]
